[package]
name = "deuxfleurs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.65"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = "0.26.2"
# Includes dirty fix so that gizmo can grab focus
egui-gizmo = { git = "https://github.com/Lieunoir/egui-gizmo", rev = "781851db0e" }
egui-wgpu = { version = "0.26", features = ["winit"] }
egui-winit = { version = "0.26", default-features = false, features = ["wayland"] }
env_logger = "0.9.1"
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg"] }
log = "0.4.17"
oneshot = "0.1.5"
pollster = "0.2.5"
rfd = "0.10.0"
tobj = { version = "4.0", features = [
    "async",
]}
wgpu = "0.19.3"
winit = "0.29.10"

ndarray = "0.15"
nalgebra = "0.32"
indexmap = "2.2.3"
rand = "0.8.5"
epaint = "0.26.2"

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11" }
wgpu = { version = "0.19", default-features = false, features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
js-sys = "0.3.64"
