[package]
name = "deuxfleurs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.65"
bytemuck = { version = "1.12.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = { version = "0.18.0", features = ["serde", "mint"] }
egui = "0.31"
transform-gizmo-egui = "0.5"
egui-wgpu = { version = "0.31", features = ["winit"] }
egui-winit = { version = "0.31", default-features = false, features = [
    "wayland",
] }
epaint = "0.31"
env_logger = "0.9.1"
image = { version = "0.24.4", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.17"
oneshot = "0.1.5"
pollster = "0.2.5"
rfd = "0.10.0"
wgpu = "24"
winit = "0.30"

ndarray = { version = "0.15", optional = true }
nalgebra = { version = "0.32", optional = true }
indexmap = "2.2.3"
rand = "0.8.5"
clipboard = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
memchr = "2.7.4"
atoi_radix10 = { version = "0.0.1", features = ["simd"] }
pulp = "0.18.21"

[features]
ndarray = ["dep:ndarray"]
nalgebra = ["dep:nalgebra"]

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11" }
wgpu = { version = "=24", default-features = false, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
js-sys = "0.3.64"
